Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.15.2, 5.15.6, 6.2.0
Description
When using RowLayout inside a Page which is inside an ApplicationWindow then it can cause a binding loop on implicitWidth. This happens if implicitWidth is not specified for the elements inside the RowLayout, if it has something specified then it is not having a binding loop.
Attachments
Issue Links
- relates to
-
QTBUG-99103 QQuickMessageDialog: Remove binding loop in non-native implementation
-
- Closed
-