Improve layouts in terms of efficiency and stability

Due to this, properties reflecting size hints, such as implicitWidth,
implicitHeight and Layout.minimumWidth etc are not immediately updated
anymore, they are postponed until the next polish event.

This avoids several recursion problems that Qt Quick Layouts suffered
from.

updatePolish() will now have the main responsibility to rebuild the
layout recursively. This patch removes the call to
ensureLayoutItemsUpdated() from several other places.

ensureLayoutItemsUpdated() does the "rebuilding":
  1. Ensure that all relevant items are populated in the internal layout
     engine.
  2. query the size hints from the internal layout engine and apply
     those values to the different "implicit" layout properties, such
     as:
     (Layout.minimumWidth, implicitWidth, Layout.maximumWidth)
This is done recursively, and done when the next updatePolish() arrives.

After having removed several calls to ensureLayoutItemsUpdated(), this
means that ensureLayoutItemsUpdated() is now only called from:
 - QQGLB::componentComplete()       (initialization)
 - QQL::updatePolish()              (rebuild after invalidation)
 - QQL::deactivateRecur()           (teardown)

This avoids many recursion problems we've experienced.

In addition, I had to do other related fixes:
  * Make implicitWidth/implicitHeight act like a "true property" again:
    (i.e. do not emit implicitWidthChanged when fetching implicitWidth,
    this caused unexpected binding loop problems)
    Therefore, we remove the reimplementation of getImplicitWidth() and
    getImplicitHeight()

  * insertLayoutItems() will now insert zero-sized items
    (except those that are marked as transparentForPositioner). This is
    reflected by a simplification to shouldIgnoreItem().
    The layout engine should take care of rows/columns of items with
    zero size regardless.

    Previously, when we checked if a child item should be included in
    a layout, we chose to ignore it if it had a max size of (0x0).
    However, this meant that we potentially had to rebuild a child
    layout (gathering all sizehints of the child layouts' children) just
    to check if it had a maximum size of (0x0).

    The problem was that in a layout hierarchy, layout items are added
    from top-to-bottom (it needs to know which items to include in the
    parent layout before continuing down the children of those same
    items).  However, in order to know if a child layout should be
    included, it had to rebuild the child layout before it was ready, so
    there was a catch-22....
    This worked before when the layout was built on-demand regardless,
    but with the approach this change does, shouldIgnoreItem() had
    to change.

[ChangeLog][QtQuick][Layouts] Improved layouts in terms of efficiency
and stability. Due to this, properties reflecting size hints, such as
implicitWidth, implicitHeight and Layout.minimumWidth etc are not
immediately updated anymore, they are postponed until the next polish
event.

Task-number: QTBUG-87250
Task-number: QTBUG-99103
Task-number: QTBUG-99104
Change-Id: I877287defed1ca0c9ecb88c83513da8f55cd6063
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>