src/quicklayouts/qquicklayout.cpp
@@ -697,28 +697,10 @@ QQuickItem *QQuickLayoutAttached::item() const
     return qobject_cast<QQuickItem *>(parent());
 }
 
-qreal QQuickLayoutPrivate::getImplicitWidth() const
+void QQuickLayoutPrivate::applySizeHints() const
 {
     Q_Q(const QQuickLayout);
-    if (q->invalidated()) {
-        QQuickLayoutPrivate *that = const_cast<QQuickLayoutPrivate*>(this);
-        that->implicitWidth = q->sizeHint(Qt::PreferredSize).width();
-    }
-    return implicitWidth;
-}
 
-qreal QQuickLayoutPrivate::getImplicitHeight() const
-{
-    Q_Q(const QQuickLayout);
-    if (q->invalidated()) {
-        QQuickLayoutPrivate *that = const_cast<QQuickLayoutPrivate*>(this);
-        that->implicitHeight = q->sizeHint(Qt::PreferredSize).height();
-    }
-    return implicitHeight;
-}
-
-void QQuickLayoutPrivate::applySizeHints() const {
-    Q_Q(const QQuickLayout);
     QQuickLayout *that = const_cast<QQuickLayout*>(q);
     QQuickLayoutAttached *info = attachedLayoutObject(that, true);
 
@@ -766,16 +748,10 @@ void QQuickLayout::updatePolish()
     // Might have become "undirty" before we reach this updatePolish()
     // (e.g. if somebody queried for implicitWidth it will immediately
     // calculate size hints)
-    if (invalidated()) {
-        // Ensure that all invalidated layouts are synced and valid again. Since
-        // ensureLayoutItemsUpdated() will also call applySizeHints(), and sizeHint() will call its
-        // childrens sizeHint(), and sizeHint() will call ensureLayoutItemsUpdated(), this will be done
-        // recursive as we want.
-        // Note that we need to call ensureLayoutItemsUpdated() *before* we query width() and height(),
-        // because width()/height() might return their implicitWidth/implicitHeight (e.g. for a layout
-        // with no explicitly specified size, (nor anchors.fill: parent))
-        ensureLayoutItemsUpdated();
-    }
+    // Note that we need to call ensureLayoutItemsUpdated() *before* we query width() and height(),
+    // because width()/height() might return their implicitWidth/implicitHeight (e.g. for a layout
+    // with no explicitly specified size, (nor anchors.fill: parent))
+    ensureLayoutItemsUpdated(QQuickLayout::ApplySizeHints | QQuickLayout::Recursive);
     rearrange(QSizeF(width(), height()));
     m_inUpdatePolish = false;
     qCDebug(lcQuickLayouts) << "updatePolish() LEAVING" << this;
@@ -818,26 +794,12 @@ void QQuickLayout::invalidate(QQuickItem * /*childItem*/)
     }
 }
 
-bool QQuickLayout::shouldIgnoreItem(QQuickItem *child, QQuickLayoutAttached *&info, QSizeF *sizeHints) const
+bool QQuickLayout::shouldIgnoreItem(QQuickItem *child) const
 {
-    bool ignoreItem = true;
     QQuickItemPrivate *childPrivate = QQuickItemPrivate::get(child);
-    if (childPrivate->explicitVisible) {
-        effectiveSizeHints_helper(child, sizeHints, &info, true);
-        QSizeF effectiveMaxSize = sizeHints[Qt::MaximumSize];
-        if (!effectiveMaxSize.isNull()) {
-            QSizeF &prefS = sizeHints[Qt::PreferredSize];
-            if (effectiveSizePolicy_helper(child, Qt::Horizontal, info) == QLayoutPolicy::Fixed)
-                effectiveMaxSize.setWidth(prefS.width());
-            if (effectiveSizePolicy_helper(child, Qt::Vertical, info) == QLayoutPolicy::Fixed)
-                effectiveMaxSize.setHeight(prefS.height());
-        }
-        ignoreItem = effectiveMaxSize.isNull();
-    }
-
+    bool ignoreItem = !childPrivate->explicitVisible;
     if (!ignoreItem && childPrivate->isTransparentForPositioner())
         ignoreItem = true;
-
     return ignoreItem;
 }
 
@@ -848,14 +810,35 @@ void QQuickLayout::checkAnchors(QQuickItem *item) const
         qmlWarning(item) << "Detected anchors on an item that is managed by a layout. This is undefined behavior; use Layout.alignment instead.";
 }
 
-void QQuickLayout::ensureLayoutItemsUpdated() const
+void QQuickLayout::ensureLayoutItemsUpdated(EnsureLayoutItemsUpdatedOptions options) const
 {
     Q_D(const QQuickLayout);
     if (!invalidated())
         return;
+    qCDebug(lcQuickLayouts) << "ENTER QQuickLayout::ensureLayoutItemsUpdated()" << this << options;
+    QQuickLayoutPrivate *priv = const_cast<QQuickLayoutPrivate*>(d);
+
+    // breadth-first
+    // must update the root first, and continue towards the leaf nodes.
+    // Otherwise, we wouldn't know which children to traverse to
     const_cast<QQuickLayout*>(this)->updateLayoutItems();
+
+    // make invalidate() return true
     d->m_dirty = false;
-    d->applySizeHints();
+
+    if (options & Recursive) {
+        for (int i = 0; i < itemCount(); ++i) {
+            QQuickItem *itm = itemAt(i);
+            if (QQuickLayout *lay = qobject_cast<QQuickLayout*>(itm)) {
+                lay->ensureLayoutItemsUpdated(options);
+            }
+        }
+    }
+
+    // size hints are updated depth-first (parent size hints depends on their childrens size hints)
+    if (options & ApplySizeHints)
+        priv->applySizeHints();
+    qCDebug(lcQuickLayouts) << "LEAVE QQuickLayout::ensureLayoutItemsUpdated()" << this;
 }
 
 
@@ -917,6 +900,7 @@ bool QQuickLayout::isReady() const
 void QQuickLayout::deactivateRecur()
 {
     if (d_func()->m_hasItemChangeListeners) {
+        ensureLayoutItemsUpdated();
         for (int i = 0; i < itemCount(); ++i) {
             QQuickItem *item = itemAt(i);
             // When deleting a layout with children, there is no reason for the children to inform the layout that their
