src/quicklayouts/qquicklayout_p.h
@@ -53,6 +53,8 @@
 
 #include <QPointer>
 #include <QQuickItem>
+#include <QtCore/qflags.h>
+
 #include <QtQuickLayouts/private/qquicklayoutglobal_p.h>
 #include <private/qquickitem_p.h>
 #include <QtQuick/private/qquickitemchangelistener_p.h>
@@ -81,6 +83,13 @@ public:
         NSizes
     };
 
+    enum EnsureLayoutItemsUpdatedOption {
+        Recursive                     = 0b001,
+        ApplySizeHints                = 0b010
+    };
+
+    Q_DECLARE_FLAGS(EnsureLayoutItemsUpdatedOptions, EnsureLayoutItemsUpdatedOption)
+
     explicit QQuickLayout(QQuickLayoutPrivate &dd, QQuickItem *parent = nullptr);
     ~QQuickLayout();
 
@@ -92,7 +101,8 @@ public:
     virtual void setAlignment(QQuickItem *item, Qt::Alignment align) = 0;
     virtual void invalidate(QQuickItem * childItem = nullptr);
     virtual void updateLayoutItems() = 0;
-    void ensureLayoutItemsUpdated() const;
+
+    void ensureLayoutItemsUpdated(EnsureLayoutItemsUpdatedOptions options = {}) const;
 
     // iterator
     virtual QQuickItem *itemAt(int index) const = 0;
@@ -102,7 +112,7 @@ public:
 
     static void effectiveSizeHints_helper(QQuickItem *item, QSizeF *cachedSizeHints, QQuickLayoutAttached **info, bool useFallbackToWidthOrHeight);
     static QLayoutPolicy::Policy effectiveSizePolicy_helper(QQuickItem *item, Qt::Orientation orientation, QQuickLayoutAttached *info);
-    bool shouldIgnoreItem(QQuickItem *child, QQuickLayoutAttached *&info, QSizeF *sizeHints) const;
+    bool shouldIgnoreItem(QQuickItem *child) const;
     void checkAnchors(QQuickItem *item) const;
 
     void itemChange(ItemChange change, const ItemChangeData &value) override;
@@ -145,15 +155,17 @@ private:
     friend class QQuickLayoutAttached;
 };
 
+Q_DECLARE_OPERATORS_FOR_FLAGS(QQuickLayout::EnsureLayoutItemsUpdatedOptions)
 
 class QQuickLayoutPrivate : public QQuickItemPrivate
 {
     Q_DECLARE_PUBLIC(QQuickLayout)
 public:
-    QQuickLayoutPrivate() : m_dirty(true), m_dirtyArrangement(true), m_isReady(false), m_disableRearrange(true), m_hasItemChangeListeners(false) {}
-
-    qreal getImplicitWidth() const override;
-    qreal getImplicitHeight() const override;
+    QQuickLayoutPrivate() : m_dirty(true)
+                          , m_dirtyArrangement(true)
+                          , m_isReady(false)
+                          , m_disableRearrange(true)
+                          , m_hasItemChangeListeners(false) {}
 
     void applySizeHints() const;
 
